<resources>
    <string name="app_name">Ynab Application</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="auth">Auth by Personal Access Token</string>
    <string name="url">URL</string>
    <string name="personal_access_token">Personal Access Token</string>
    <string name="sign_in">Sign In</string>

    <string name="bill_due_today">Your bill is due today!</string>
    <string name="bill_due_future">Bill due on %1$s, %2$s</string>
    <string name="bill_due_past">Bill due %1$d days ago</string>
    <string name="next_bill">Next bill is %1$s, %2$s</string>
    <string name="bill_due_tomorrow">Bill due tomorrow</string>
    <string name="bill_due_yesterday">Bill due yesterday</string>
    <string name="error_loading_bills">Error loading bills</string>
    <string name="authorization_error">Authorization Error</string>
    <string name="syncing_account">Syncing your account…</string>
    <string name="no_bills">Hurray! You have no bills</string>
    <string name="bill_amount">%1$s %2$s</string>
    <string name="no_browser_installed">No application can handle this request. Please install a web browser</string>
    <string name="user_did_it">You did it!</string>
    <string name="due_today">Due today</string>
    <string name="one_more_day_to_target">1 more day to your target!</string>
    <string name="target_missed">Missed by %1$d days</string>
    <string name="yesterday_target">Oh no! Your target was yesterday</string>
    <string name="days_to_go">%1$d days to go</string>
    <string name="generic_delete_error">An error occurred while deleting</string>
    <string name="authentication_failed">Authentication Failed</string>
    <string name="authentication_failed_message">There was an issue retrieving access token from your Firefly III instance. Ensure you are using %1$s as your redirect URI in your Firefly III config.</string>
    <string name="no_piggy_bank">No Piggy Bank found</string>
    <string name="no_transaction_found">No %1$s found</string>
    <string name="no_account_found">No %1$s found</string>
    <string name="transaction_deleted">Transaction deleted</string>
    <string name="issue_deleting">There was an issue deleting your %1$s. Please try again later</string>
    <string name="transaction_updated">Transaction Updated</string>
    <string name="transaction_added">Transaction Added</string>
    <string name="issue_refreshing_token">There was an issue refreshing your token</string>
    <string name="refreshing_token">Refreshing your access token…</string>
    <string name="server_version">Server Version</string>
    <string name="mobile_version">Mobile Version</string>
    <string name="api_version">API Version</string>
    <string name="operating_system">Operating System</string>
    <string name="urge_user_to_post_bug_on_github">PLEASE POST THE ATTACHED STACK TRACE ON GITHUB IF POSSIBLE</string>
    <string name="financial_control">FINANCIAL CONTROL</string>
    <string name="delete_all_budgets">Delete ALL your budget</string>
    <string name="delete_all_bills">Delete ALL your bills</string>
    <string name="delete_all_piggy_bank">Delete ALL your piggy banks</string>
    <string name="automation">Automation</string>
    <string name="delete_all_rules">Delete all rules</string>
    <string name="delete_recurring_transactions">Delete ALL your recurring transactions</string>
    <string name="delete_all_accounts_summary">Deleting accounts will also delete ALL associated withdrawals, deposits and transfers!</string>
    <string name="delete_all_accounts">Delete ALL your accounts</string>
    <string name="delete_asset_accounts">Delete ALL your assets accounts</string>
    <string name="delete_expense_accounts">Delete ALL your expense accounts</string>
    <string name="delete_revenue_accounts">Delete ALL your revenue accounts</string>
    <string name="delete_liabilities_accounts">Delete ALL your liabilities</string>
    <string name="delete_all_transactions">Delete ALL your transactions</string>
    <string name="delete_all_withdrawals">Delete ALL your withdrawals</string>
    <string name="delete_all_deposits">Delete ALL your deposits</string>
    <string name="delete_all_transfers">Delete ALL your transfers</string>
    <string name="delete_data_from_firefly">Delete data from Firefly III</string>
    <string name="transaction">Transactions</string>
    <string name="add_transaction_shortcut">Create new transaction</string>
    <string name="account">Accounts</string>
    <string name="are_you_sure">Are you absolutely sure?</string>
    <string name="permanent_delete_stuff">Be careful with these buttons. Deleting stuff is permanent.</string>
    <string name="delete_all_categories">Delete ALL your categories</string>
    <string name="delete_all_tags">Delete ALL your tags</string>
    <string name="delete_all_object_groups">Delete ALL your object groups</string>
    <string name="user_understand">I understand the consequences</string>
    <string name="classification">Classification</string>
    <string name="transactionType">Transaction Type</string>
    <string name="dashboard">Dashboard</string>
    <string name="source_account">Source Account</string>
    <string name="asset_account">Asset Accounts</string>
    <string name="expense_account">Expense Accounts</string>
    <string name="revenue_account">Revenue Accounts</string>
    <string name="categories">Categories</string>
    <string name="transfer">Transfer</string>
    <string name="tags">Tags</string>
    <string name="bills_to_pay">Bills To Pay</string>
    <string name="deposit">Deposit</string>
    <string name="income">Income</string>
    <string name="expense">Expenses</string>
    <string name="all_budget">All budgets</string>
    <string name="balance">Balance</string>
</resources>